{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 25,
  "lineage": "70db5ec9-91eb-429c-83f1-df2a8a87adc4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916147069865:internet-gateway/igw-0b1a5cb9ddcf094f0",
            "id": "igw-0b1a5cb9ddcf094f0",
            "owner_id": "916147069865",
            "region": "us-east-1",
            "vpc_id": "vpc-09fcaadf3c1a72a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_fiap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916147069865:route-table/rtb-06ad5fa3bf951d2c5",
            "id": "rtb-06ad5fa3bf951d2c5",
            "owner_id": "916147069865",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b1a5cb9ddcf094f0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.0.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "local",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fcaadf3c1a72a92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc_fiap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_0",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0808e87961e921045",
            "region": "us-east-1",
            "route_table_id": "rtb-06ad5fa3bf951d2c5",
            "subnet_id": "subnet-0d18602cfb042e209"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_fiap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ea5fb419eb9147a",
            "region": "us-east-1",
            "route_table_id": "rtb-06ad5fa3bf951d2c5",
            "subnet_id": "subnet-052012e167751da95"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_fiap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt_association_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9b2a714505e85f5",
            "region": "us-east-1",
            "route_table_id": "rtb-06ad5fa3bf951d2c5",
            "subnet_id": "subnet-002f0c87579cd5e0d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt_public",
            "aws_subnet.subnet_public",
            "aws_vpc.vpc_fiap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916147069865:security-group/sg-0f45fe024df7733ce",
            "description": "Usado para expor services na internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f45fe024df7733ce",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "postech-g57-sg",
            "name_prefix": "",
            "owner_id": "916147069865",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-09fcaadf3c1a72a92"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_fiap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916147069865:subnet/subnet-0d18602cfb042e209",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d18602cfb042e209",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916147069865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            },
            "vpc_id": "vpc-09fcaadf3c1a72a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_fiap"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916147069865:subnet/subnet-052012e167751da95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052012e167751da95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916147069865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            },
            "vpc_id": "vpc-09fcaadf3c1a72a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_fiap"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916147069865:subnet/subnet-002f0c87579cd5e0d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002f0c87579cd5e0d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "916147069865",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            },
            "vpc_id": "vpc-09fcaadf3c1a72a92"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.vpc_fiap"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_fiap",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:916147069865:vpc/vpc-09fcaadf3c1a72a92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d58b27aead54a9d3",
            "default_route_table_id": "rtb-0e6c25da724c0df19",
            "default_security_group_id": "sg-09d6979d0af229b1d",
            "dhcp_options_id": "dopt-0a445258c1ac69897",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09fcaadf3c1a72a92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e6c25da724c0df19",
            "owner_id": "916147069865",
            "region": "us-east-1",
            "tags": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            },
            "tags_all": {
              "Environment": "Production",
              "Name": "postech-g57-fiap",
              "School": "FIAP",
              "Year": "2025"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}